WIP #4 DONE .4.3.1 .4.3.2 .5 - Implement IssueJDBCMySQLDAO with IIssueDAO interface